# Bible_AI_Database

./: .env.example  .gitignore  .pre-commit-config.yaml  API_DOCUMENTATION.md  API_IMPLEMENTATION_SUMMARY.md  API_QUICKSTART.md  CMDs.txt  COMPLETE_PROJECT_REVIEW.md  CONFIGURATION_MIGRATION.md  ENHANCED_SCRAPER_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  MANIFEST.in  PROJECT_STATUS.md  README.md  RECOMMENDATIONS_REPORT.md  SERMON_FORMAT_ANALYSIS.md  SESSION_COMPLETE.md  TRANSCRIPT_CLEANING_SUMMARY.md  config.json  config.yaml  config.yaml.deprecated  label_rules.yml  menu_master_CFG.json  prodigy.json  prodigy_patterns.jsonl  pyproject.toml  pytest.ini  requirements-api.txt  requirements-test.txt  requirements.txt  sample_analysis_results.txt  setup.py  step_config.json.deprecated
.claude/: settings.local.json
.github/: markdown-link-check-config.json
.github/workflows/: ci.yml  release.yml
DOCUMENTATION/: AI_TRAINING_ARCHITECTURE.md  BIBLE_ONLY_EXPANSION_INSTRUCTIONS.md  BIBLE_ONLY_V4_CHANGES.md  Biblical_NLP_Taxonomy_Guide.md  CONSOLIDATION_SUMMARY.md  ENTITY_TAXONOMY.md  FINAL_RESULTS.md  PRODIGY_WORKFLOW.md  PROJECT_ANALYSIS_REPORT.md  PROJECT_REPORT.md  SERMONINDEX_API_SPEC.md  extraction_design.md
DOCUMENTATION/Entity Data/: animals.txt
DOCUMENTATION/project_history/: FOLDERS_README.md  PHASE1_COMPLETE.md  PHASE1_IMPLEMENTATION.md  PHASE2_COMPLETE.md  PHASE2_CROSS_REF_OPTIMIZATION.md
Folders/Docs/: PHASE2_EXPORT_NER_SPLIT.md  PHASE2_STEP_SPLIT_COMPLETE.md  PHASE3_COMPLETE.md  PHASE3_PLAN.md  PHASE3_TESTING_COMPLETE.md  REFACTORING_PLAN.md  REFACTORING_PROGRESS.md
Folders/OnDeck files - here for cleanliness/: 66MASTER_v.98_BAK.py  analyze_samples.py  biblegateway_login.py  biblegateway_session.json  clean_filenames.py  cross_references2.txt  fix_single_line_files.py  login_log.txt  remove_empty_lines.py
bible_entities/: BIBLE_FLORA.json  BIBLE_NATIONS.json  DEITY.json  DEITY_with_multilabel_context.json  DIVINE_TITLE.json  LOCATION.json  TIME.json  TITLE.json  TOOLS_MEASUREMENTS.json
cache/1 Chronicles/: STEP_1 Chronicles.1.json  STEP_1 Chronicles.10.json  STEP_1 Chronicles.11.json  STEP_1 Chronicles.12.json  STEP_1 Chronicles.13.json  STEP_1 Chronicles.14.json  STEP_1 Chronicles.15.json  STEP_1 Chronicles.16.json  STEP_1 Chronicles.17.json  STEP_1 Chronicles.18.json  STEP_1 Chronicles.19.json  (+18 more)
code/: analyze_transcripts.py  bible_scraper.py  constants.py  dataset_audit.py  diagnose_api.py  extract_concordance_clues.py  menu_master.py  menu_master_CFG.json  sermon_scraper.py  sermon_scraper_enhanced.py  silver_alignment.py  silver_data_models.py  silver_export.py  silver_label_rules.py  test_sermon_scraper.py  train_baseline_spacy copy.py  train_baseline_spacy.py
concordance_tools/: strongs_batch_scraper.py  strongs_scraper.py
data/: esv_crossword_master.txt
dev/: Complete_bible_list.txt  fix_redundant_column.py  merge_wordlists.py  prepare_words_for_ai.py  strong_bible_list_v1.txt  strong_bible_list_v1_backup.txt  strong_bible_list_v1_duplicates_report.txt  strongs_cleaned_for_crossword.txt
gazetteers/: ANGEL_CHORUS.txt  BIBLE_ANIMALS.txt  BIBLE_FLORA.txt  BIBLE_NATIONS.txt  BLESSING_FORMULA.txt  BODY_PART.txt  CHRISTOLOGY.txt  CONCEPT.txt  COVENANT_TERM.txt  CULTURAL_PRACTICE.txt  CURSE_FORMULA.txt  DEITY.txt  DEMON.txt  DIVINE_PROMISE.txt  DIVINE_PRONOUN.txt  DIVINE_TITLE.txt  ECCLESIOLOGY.txt  ECONOMIC_TERM.txt  ESCHATOLOGY.txt  FALSE_GOD.txt  FOOD.txt  GENEALOGY_REF.txt  GENERIC_PRONOUN.txt  GENRE_MARKER.txt  HERMENEUTIC_KEY.txt  HUMAN_COLLECTIVE.txt  HUMAN_PRONOUN.txt  INTERTEXTUAL_REF.txt  LAW_COMMANDMENT.txt  LITURGICAL_TERM.txt  LOCATION.txt  METAPHORICAL.txt  METONYMY.txt  NUMBER.txt  NUMERIC_MEASURE.txt  NUMERIC_SYMBOLISM.txt  OATH_FORMULA.txt  OBJECTS_MANMADE.txt  OBJECTS_NATURAL.txt  PARABLE_IMAGE.txt  (+16 more)
output/: prodigy_patterns.jsonl
scripts/: migrate_config.py
silver_out/: dev.jsonl  test.jsonl
tests/: README.md  __init__.py  conftest.py  test_alignment.py  test_data_models.py  test_integration.py  test_label_rules.py  test_step_parser.py
utils/: Tag Strongs to Json_TESTER.py  backfill_strongs_lexicon.py  clean_kjv_text.py  create_word_index.sql  export_genesis1_jsonl.py  make_gazetteers.py  morph_map.tester.json  propose_label_candidates.py
(+2519 files in other folders)
